examples/valid/single_chararacter_variable_reference.reqlang
```%config
[[vars]]
name = "a"

[envs.test]
a = "123"
```

```%request
GET https://example.com/{{:a}} HTTP/1.1
```
