examples/invalid/undefined_variable_reference_in_response.reqlang
```%request
GET http://example.com HTTP/1.1
````

```%response
HTTP/1.1 200 OK
test: {{:value}}

```